[gd_scene load_steps=13 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://sprite/smokepuff.png" type="Texture" id=2]
[ext_resource path="res://Player_Polygons.tscn" type="PackedScene" id=3]
[ext_resource path="res://CameraPivot.gd" type="Script" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.803554, 0, 1, Vector2( 0.988506, 0.794318 ), 1.17303, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.993378, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.760784, 0.760784, 0.760784, 0, 1, 1, 1, 1 )

[sub_resource type="Curve" id=3]
max_value = 300.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.741379, 300 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.488506, 0.518182 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0465909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.986755, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0.530201 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 13 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 11 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 32, 95 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="JumpBufferTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.75
one_shot = true

[node name="AnimationLockTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="Equipment" type="Node" parent="."]

[node name="CornerCorrection_Left" type="Node2D" parent="."]
z_index = 2

[node name="RayCast2D" type="RayCast2D" parent="CornerCorrection_Left"]
position = Vector2( -8, -7 )
enabled = true
cast_to = Vector2( 0, -16 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="CornerCorrection_Left"]
position = Vector2( -7, -8 )
enabled = true
cast_to = Vector2( 0, -16 )
collision_mask = 2

[node name="CornerCorrection_Right" type="Node2D" parent="."]
z_index = 2

[node name="RayCast2D" type="RayCast2D" parent="CornerCorrection_Right"]
position = Vector2( 8, -7 )
enabled = true
cast_to = Vector2( 0, -16 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="CornerCorrection_Right"]
position = Vector2( 7, -8 )
enabled = true
cast_to = Vector2( 0, -16 )
collision_mask = 2

[node name="PlayerSprite" type="Node2D" parent="."]
position = Vector2( 0, -5 )

[node name="Sprite" type="Sprite" parent="PlayerSprite"]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Player_Polygons" parent="PlayerSprite" instance=ExtResource( 3 )]

[node name="FootDust" type="CPUParticles2D" parent="PlayerSprite"]
position = Vector2( 0, 13 )
rotation = 3.14159
scale = Vector2( 0.5, -0.5 )
emitting = false
amount = 18
lifetime_randomness = 0.75
local_coords = false
texture = ExtResource( 2 )
spread = 30.0
gravity = Vector2( 0, -64 )
initial_velocity = 25.0
angular_velocity = 10.0
angular_velocity_random = 1.0
radial_accel = 10.0
angle = 180.0
angle_random = 0.5
scale_amount = 1.5
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="FallParticle" type="CPUParticles2D" parent="PlayerSprite"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( -1, 13 )
z_index = 3
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
preprocess = 0.1
explosiveness = 1.0
local_coords = false
texture = ExtResource( 2 )
emission_shape = 4
emission_points = PoolVector2Array( 1, 0, -1, 0 )
emission_normals = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 0 )
spread = 90.0
gravity = Vector2( 0, -45 )
initial_velocity = 10.0
linear_accel = 30.0
radial_accel = 360.0
radial_accel_random = 0.25
damping_curve = SubResource( 3 )
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="PlayerSounds" type="Node2D" parent="."]

[node name="Running" type="AudioStreamPlayer2D" parent="PlayerSounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
z_index = 1
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 7 )

[node name="PlayerVisible" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.38419e-07, -1.00001 )
scale = Vector2( 0.4, 0.4 )

[node name="CameraPivot" type="Position2D" parent="."]
script = ExtResource( 4 )

[node name="Camera_Offset" type="Position2D" parent="CameraPivot"]
position = Vector2( 64, 0 )

[node name="Camera2D" type="Camera2D" parent="CameraPivot/Camera_Offset"]
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 2.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Godotinho" type="Sprite" parent="CameraPivot/Camera_Offset"]
visible = false
scale = Vector2( 0.1, 0.1 )
z_index = 10
texture = ExtResource( 1 )

[node name="Lookup_Tween" type="Tween" parent="CameraPivot"]

[node name="Speedup_Timer" type="Timer" parent="CameraPivot"]
process_mode = 0
one_shot = true
[connection signal="jumped" from="." to="CameraPivot" method="_on_Player_jumped"]
[connection signal="touched_ground" from="." to="CameraPivot" method="_on_Player_touched_ground"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="AnimationLockTimer" to="." method="_on_AnimationLockTimer_timeout"]
[connection signal="screen_exited" from="PlayerVisible" to="CameraPivot" method="_on_PlayerVisible_screen_exited"]
[connection signal="tween_completed" from="CameraPivot/Lookup_Tween" to="CameraPivot" method="_on_Lookup_Tween_tween_completed"]
[connection signal="timeout" from="CameraPivot/Speedup_Timer" to="CameraPivot" method="_on_Speedup_Timer_timeout"]
